src/McProtoNet/SourceGenerator/minecraft-packets/data/pc/1.13.2/README.md
<details><summary>Collected (62)</summary>
<p>

| Packet |
| --- |
| login |
| custom_payload |
| difficulty |
| abilities |
| held_item_slot |
| declare_recipes |
| tags |
| entity_status |
| declare_commands |
| unlock_recipes |
| player_info |
| map_chunk |
| spawn_entity_living |
| entity_metadata |
| entity_update_attributes |
| spawn_entity |
| entity_velocity |
| position |
| world_border |
| update_time |
| spawn_position |
| window_items |
| set_slot |
| multi_block_change |
| advancements |
| entity_head_rotation |
| update_health |
| experience |
| keep_alive |
| entity_equipment |
| block_change |
| rel_entity_move |
| entity_move_look |
| entity_teleport |
| chat |
| entity_destroy |
| named_entity_spawn |
| tab_complete |
| combat_event |
| unload_chunk |
| respawn |
| game_state_change |
| sound_effect |
| set_cooldown |
| entity_look |
| map |
| title |
| scoreboard_objective |
| scoreboard_display_objective |
| scoreboard_score |
| named_sound_effect |
| entity_effect |
| remove_entity_effect |
| open_window |
| craft_progress_bar |
| transaction |
| close_window |
| boss_bar |
| spawn_entity_painting |
| collect |
| statistics |
| world_event |

</p>
</details>
<details><summary>Missing (24)</summary>
<p>

| Packet |
| --- |
| spawn_entity_experience_orb |
| spawn_entity_weather |
| animation |
| block_break_animation |
| tile_entity_data |
| block_action |
| face_player |
| nbt_query_response |
| kick_disconnect |
| explosion |
| world_particles |
| entity |
| vehicle_move |
| open_sign_entity |
| craft_recipe_response |
| bed |
| resource_pack_send |
| camera |
| attach_entity |
| set_passengers |
| teams |
| stop_sound |
| playerlist_header |
| select_advancement_tab |

</p>
</details>