src/McProtoNet/SourceGenerator/minecraft-packets/data/pc/1.14.4/README.md
<details><summary>Collected (64)</summary>
<p>

| Packet |
| --- |
| login |
| custom_payload |
| difficulty |
| abilities |
| held_item_slot |
| declare_recipes |
| tags |
| entity_status |
| declare_commands |
| unlock_recipes |
| position |
| player_info |
| update_view_position |
| update_light |
| map_chunk |
| spawn_entity_living |
| entity_metadata |
| entity_update_attributes |
| spawn_entity |
| entity_velocity |
| world_border |
| update_time |
| spawn_position |
| window_items |
| set_slot |
| update_health |
| experience |
| keep_alive |
| block_change |
| multi_block_change |
| advancements |
| entity_equipment |
| entity_head_rotation |
| rel_entity_move |
| entity_move_look |
| entity_teleport |
| entity_destroy |
| chat |
| named_entity_spawn |
| tab_complete |
| combat_event |
| unload_chunk |
| respawn |
| game_state_change |
| entity_look |
| sound_effect |
| set_cooldown |
| world_event |
| map |
| title |
| scoreboard_objective |
| scoreboard_display_objective |
| scoreboard_score |
| named_sound_effect |
| entity_effect |
| remove_entity_effect |
| open_window |
| transaction |
| craft_progress_bar |
| close_window |
| boss_bar |
| spawn_entity_painting |
| collect |
| statistics |

</p>
</details>
<details><summary>Missing (29)</summary>
<p>

| Packet |
| --- |
| spawn_entity_experience_orb |
| spawn_entity_weather |
| animation |
| block_break_animation |
| tile_entity_data |
| block_action |
| face_player |
| nbt_query_response |
| kick_disconnect |
| explosion |
| open_horse_window |
| world_particles |
| trade_list |
| entity |
| vehicle_move |
| open_book |
| open_sign_entity |
| craft_recipe_response |
| resource_pack_send |
| camera |
| update_view_distance |
| attach_entity |
| set_passengers |
| teams |
| entity_sound_effect |
| stop_sound |
| playerlist_header |
| select_advancement_tab |
| acknowledge_player_digging |

</p>
</details>